# 3d-vibe-bevy

./: .gitignore  Cargo.toml  job-logs.txt
.github/workflows/: release.yml
release/visio-vibe1/: CLAUDE.md  README.txt
src/: main.rs
