[package]
name = "visio-vibe1"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15.0", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline", 
    "bevy_pbr",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "png",
    "x11",
    "tonemapping_luts",
    "ktx2",
    "zstd"
] }
bevy_egui = "0.31.0"
